--- a/opinion-ate/package.json
+++ b/opinion-ate/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.25.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "flush-promises": "^1.0.2",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.0",
